2006-09-27  Johan Euphrosine  <johan@mekensleep.com>

        * Release 1.0.27

	* tests/test-pokerinterface.py.in:
	added test case for bug #7085

	* pokernetwork/dispatch.py (EventDispatcher.publishEvent): 
	now check that at least one callback is registered before publishing
	
	* tests/test-upgrade.py.in: 
	added test case for failing CheckClientVersion

	* pokernetwork/upgrade.py: 
	failing upgrade now throw an UserWarning	

2006-09-26  Cedric Pinson  <cpinson@freesheep.org>

	* pokerui/pokerrenderer.py:
	Add pythonEvent to receive event from c++

	* test/test-quit.py.in:
	Test the quit fix

2006-09-22  Johan Euphrosine  <johan@mekensleep.com>

        * Release 1.0.26

	* pokerui/pokerrenderer.py:
	* tests/test-pokerrenderer.py.in:
	fixed tournaments_lobby_tabs_window and lobby_tab_window not correctly hidden
	tested state transition and correct PacketPokerInterfaceCommand reception
	renamed updateDecorations to updateInterfaceWindows	
	
2006-09-22  Loic Dachary  <loic@dachary.org>


	* tests/test-pokerservice.py.in: test setAccount function

	* pokernetwork/pokerservice.py: set affiliate indice when creating user

	* pokernetwork/pokerpackets.py: affiliate indice

	* database/schema.sql.in, database/1.0.25-1.0.26.sql: affiliate tables

	* Makefile.am: database migration to 1.0.26

2006-09-21  Loic Dachary  <loic@dachary.org>

	* conf/poker.client.xml.in, conf/poker.server.xml.in, examples/poker.bot.xml, examples/poker.server-monotone.xml, examples/poker.server.xml, pokerclient2d/Makefile.am, pokerclient2d/poker2d.xml.in, tests/conf/poker.client.xml.in, conf/poker.bot.xml.in:
	version update

2006-09-21  cpinson  <cpinson@call>

	* pokerui/pokerrenderer.py: change quit for QUIT

	* gentoo/dev-games/poker-network/poker-network-1.0.26.ebuild:
	upgrade gentoo package

2006-09-21  cpinson  <cpinson@call>

	* ChangeLog, pokerui/pokerrenderer.py:
	Fix bug when quitting in outfit editor
	and add events from c++ to pokerrenderer.py
