@@ -1,6 +1,12 @@
-2006-09-27  Johan Euphrosine  <johan@mekensleep.com>
+2006-09-30  Cedric Pinson  <cpinson@freesheep.org>
 
         * Release 1.0.27
+
+	* test/test-quit.py.in:
+	Update the test to pass in handleMenu (it was missed)
+
+2006-09-27  Johan Euphrosine  <johan@mekensleep.com>
+
 
 	* tests/test-pokerinterface.py.in:
 	added test case for bug #7085
